Datatables CSS fix for controls overlapping numbers at bottom to table. Take 2

--- a/assets/css/extended/theme-vars.css
+++ b/assets/css/extended/theme-vars.css
@@ -2,15 +2,13 @@
     --main-width: 1000px;
 }
 
-.dataTables_wrapper .dataTables_info {
-    padding-top: 0.85em;
+.dataTables_wrapper .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
-.dataTables_wrapper .dataTables_paginate {
-    padding-top: 0.5em;
-}
-
-.dataTables_wrapper .dataTables_length,
-.dataTables_wrapper .dataTables_filter {
+.dataTables_length, .dataTables_filter {
     padding-bottom: 1em;
 }
